<resources>
    <string name="app_name">Dayspring Tutorials</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_campus_news">Campus News</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="home">HOME</string>
    <string name="chm_102">CHM 102</string>
    <string name="mth_101">MTH 101</string>
    <string name="mth_102">MTH 102</string>
    <string name="mth_104">MTH 104</string>
    <string name="menu_accomodation">Accomodation</string>
    <string name="menu_subscription">Subscription</string>
    <string name="menu_find_us">Find Us</string>
</resources>
