<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.atuma.dayspringtutorials.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_partOneCoursesFragment"
            app:destination="@id/partOneCoursesFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
        <action
            android:id="@+id/action_nav_home_to_partTwoCoursesFragment"
            app:destination="@id/partTwoCoursesFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
        <action
            android:id="@+id/action_nav_home_to_partThreeCoursesFragment"
            app:destination="@id/partThreeCoursesFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.atuma.dayspringtutorials.ui.gallery.GalleryFragment"
        android:label="@string/menu_leaderboard"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_forum"
        android:name="com.atuma.dayspringtutorials.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_forum"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_campus_news"
        android:name="com.atuma.dayspringtutorials.ui.tools.ToolsFragment"
        android:label="@string/menu_campus_news"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.atuma.dayspringtutorials.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.atuma.dayspringtutorials.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/partOneCoursesFragment"
        android:name="com.atuma.dayspringtutorials.ui.partOne.PartOneCoursesFragment"
        android:label="PartOneCoursesFragment" />
    <fragment
        android:id="@+id/partTwoCoursesFragment"
        android:name="com.atuma.dayspringtutorials.ui.partTwo.PartTwoCoursesFragment"
        android:label="PartTwoCoursesFragment" />
    <fragment
        android:id="@+id/partThreeCoursesFragment"
        android:name="com.atuma.dayspringtutorials.ui.partThree.PartThreeCoursesFragment"
        android:label="PartThreeCoursesFragment" />
</navigation>